@@ -1,4 +1,5 @@
 libece 0.3a-wip (DD/MM/YYYY):
+	- commands paths changed
 	- digest changed to SHA1
 	- Content-Type changed to -ww-form-urlencoded
 	- bindings: basic swig-based python bindings
